# xeus-brainfuck

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  environment-dev.yml  environment-wasm-build.yml  environment-wasm-host.yml  environment.yml  xeus-brainfuckConfig.cmake.in
docs/: Doxyfile  environment.yml
docs/source/: conf.py  dev-build-options.rst  index.rst  usage.rst
include/xeus-brainfuck/: xbrainfuck.hpp  xeus_brainfuck_config.hpp  xinterpreter.hpp
notebooks/: xeus-brainfuck.ipynb
notebooks/.ipynb_checkpoints/: conversion-checkpoint.txt  xeus-ook-checkpoint.ipynb
share/jupyter/kernels/xbrainfuck/: kernel.json  kernel.json.in
share/jupyter/kernels/xook/: kernel.json  kernel.json.in
src/: main.cpp  main_emscripten_kernel.cpp  xbrainfuck.cpp  xinterpreter.cpp
test/: test_xbrainfuck_kernel.py
